--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sentiment feedback</title>
-    <meta name="description" content="">
+    <title>Sentiment experiment</title>
+    <meta name="description" content="Write down anything and the background will change based on the sentiment expressed.">
     <meta name="viewport" content="width=device-width">
+    <meta name="author" content="Paolo Chiabrera">
+    <meta property="og:title" content="Sentiment experiment">
+    <meta property="og:image" content="/assets/sentiment.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:description" content="Write down anything and the background will change based on the sentiment expressed.">
   </head>
 
   <body>
