add details to the og:image

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width">
     <meta name="author" content="Paolo Chiabrera">
     <meta property="og:title" content="Sentiment experiment">
-    <meta property="og:image" content="/assets/sentiment.jpg">
+    <meta property="og:image" content="/assets/preview.jpg">
+    <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:description" content="Write down anything and the background will change based on the sentiment expressed.">
