--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,13 @@
     <meta name="description" content="Write down anything and the background will change based on the sentiment expressed.">
     <meta name="viewport" content="width=device-width">
     <meta name="author" content="Paolo Chiabrera">
-    <meta property="og:title" content="Sentiment experiment">
-    <meta property="og:image" content="/assets/preview.jpg">
+    <meta property="og:title" content="Sentiment experiment" />
+    <meta property="og:description" content="Write down anything and the background will change based on the sentiment expressed." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/assets/preview.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
-    <meta property="og:description" content="Write down anything and the background will change based on the sentiment expressed.">
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />    
   </head>
 
   <body>
