set full url og:image

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
     <meta property="og:title" content="Sentiment experiment" />
     <meta property="og:description" content="Write down anything and the background will change based on the sentiment expressed." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/assets/preview.jpg" />
+    <meta property="og:image" content="http://sentiment.d3lirium.eu/assets/preview.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />    
+    <meta property="og:image:height" content="630" />
   </head>
 
   <body>
