--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,20 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Sentiment experiment</title>
-    <meta name="description" content="Write down anything and the background will change based on the sentiment expressed.">
-    <meta name="viewport" content="width=device-width">
-    <meta name="author" content="Paolo Chiabrera">
+    <meta name="description" content="Write down anything and the background will change based on the sentiment expressed." />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="author" content="Paolo Chiabrera" />
     <meta property="og:title" content="Sentiment experiment" />
+    <meta property="og:url" content="http://sentiment.d3lirium.eu/" />
     <meta property="og:description" content="Write down anything and the background will change based on the sentiment expressed." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="http://sentiment.d3lirium.eu/assets/preview.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta property="og:image:width" content="1400" />
+    <meta property="og:image:height" content="734" />
+    <meta property="fb:app_id" content="299767190358131" />
   </head>
 
   <body>
